Kubernetes/crud-app/overlay/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: dev
  name: dev
