Kubernetes/crud-app/overlay/dev/crud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
spec:
  rules:
  - host: "crud-dev.company.com"
